syntax = "proto3";

package memberVerfication;

// Enums
enum FileType {
  FILE_TYPE_UNSPECIFIED = 0;
  PASSPORT_PHOTO = 1;
  SELFIE_PHOTO = 2;
}

// Import standard types for an empty response and timestamp
message Empyt {}

message SuccessResponse {
  string message = 1;
}

enum VerificationStatus {
  VERIFICATION_STATUS_UNSPECIFIED = 0; // Default zero value (must be first)
  PENDING = 1;
  APPROVED = 2;
  REJECTED = 3;
}

//------------------------
// Message
//------------------------

message MemberVerification {
  string id = 1;
  string userId = 2;
  string passportPhoto = 3;
  string selfiePhoto = 4;
  VerificationStatus verificationStatus = 5;
  string isVerifiedBy = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

// Create Requst
message UpsertMemberVerificationRequest {
  string userId = 1;
  optional string passportPhoto = 2;
  optional string selfiePhoto = 3;
}

message UpdatePhotoRequest {
  string id = 1;
  string fileUrl = 2;
  FileType fileType = 3;
}

message UpdateMemberVerificationRequest {
  string id = 1;
  optional string passportPhoto = 2;
  optional string selfiePhoto = 3;
  optional VerificationStatus verificationStatus = 4;
  optional string isVerifiedBy = 5;
}

// Delete Request
message DeleteMemberVerificationRequest {
  string id = 1;
}

// ----------------------------
// Sevices
// ----------------------------

service MemberVerificationService {
  rpc UpsertVerification(UpsertMemberVerificationRequest) returns (SuccessResponse);
  rpc UpdateMemberPhoto(UpdatePhotoRequest) returns (SuccessResponse);
  rpc UpdateVerification(UpdateMemberVerificationRequest) returns (SuccessResponse);
  rpc DeleteVerification(DeleteMemberVerificationRequest) returns (SuccessResponse);
}
