syntax = "proto3";

package userInformation;

import "common/basic.proto";
import "common/basic-query.proto";

// Enums
enum Gender {
  GENDER_UNSPECIFIED = 0;
}


// --- User Information Message ---
message UserInformation {
  string id = 1;
  string userId = 2;
  optional string profileImage = 3;
  optional string gender = 4;
  optional string address = 5;
  optional string country = 6;
  optional string city = 7;
  optional string cvForm = 8;
  optional string additionalInformation = 9;
  string createdAt = 10;
  string updatedAt = 11;
}


// ---------------------
// CRUD Responses
// ---------------------

message CreateUserInformationResponse {
  bool success = 1;
  string message = 2;
}


message UserInformationResponse {
  bool success = 1;
  optional string message = 2;
  UserInformation userInformation = 3;
}

message ListUserInformationsResponse {
  repeated UserInformation userInformations = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteUserInformationResponse {
  bool success = 1;
  string message = 2;
}

message AllUserInformationsWithMetaResponse {
  repeated UserInformation data = 1;
  common.basic.usage.PaginationMeta meta = 2;
}


// ---------------------
// CRUD Requests
// ---------------------

message GetUserInformationRequest {
  string userId = 1;
}

message ListUserInformationsRequest {
  int32 page = 1;
  int32 limit = 2;
  optional string country = 3;
  optional string city = 4;
}

message GetAllUserInformationsRequest {
  common.basic.query.BasicQuery basicQuery = 1;
}

message CreateUserInformationRequest {
  string userId = 1;
  optional string profileImage = 2;
  optional string gender = 3;
  optional string address = 4;
  optional string country = 5;
  optional string city = 6;
  optional string cvForm = 7;
  optional string additionalInformation = 8;
}

message UpdateUserInformationRequest {
  string userId = 1;
  optional string profileImage = 2;
  optional string gender = 3;
  optional string address = 4;
  optional string country = 5;
  optional string city = 6;
  optional string cvForm = 7;
  optional string additionalInformation = 8;
}

message DeleteUserInformationRequest {
  string userId = 1;
}


// ---------------------
// CRUD Service
// ---------------------
service UserInformationService {
  rpc CreateUserInformation (CreateUserInformationRequest) returns (CreateUserInformationResponse);
  rpc GetUserInformation (GetUserInformationRequest) returns (UserInformationResponse);
  rpc GetAllUserInformations (GetAllUserInformationsRequest) returns (AllUserInformationsWithMetaResponse);
  rpc UpdateUserInformation (UpdateUserInformationRequest) returns (CreateUserInformationResponse);
  rpc DeleteUserInformation (DeleteUserInformationRequest) returns (DeleteUserInformationResponse);
  rpc ListUserInformations (ListUserInformationsRequest) returns (ListUserInformationsResponse);
}